opam-version: "2.0"
name: "rungen"
version: "0.1"
synopsis: "Generates dune files to run benchmarks from centralised config"
maintainer: "Sadiq Jaffer <sadiq@toao.com>"
authors: "Sadiq Jaffer <sadiq@toao.com>"
license: "MIT"
homepage: "https://github.com/ocaml-bench/rungen"
bug-reports: "https://github.com/ocaml-bench/rungen/issues"
dev-repo: "https://github.com/shakthimaan/rungen"
depends: [ "ocaml" "yojson" "sexplib0" ]
build: [
  ["dune" "build" "-p" name]
]
description: """
The rungen utility generates dune files to execute
[Sandmark](https://github.com/ocaml-bench/sandmark) benchmarks.
"""
